Refactor extract composables and start update bar

--- a/FacebookCompose/app/build.gradle
+++ b/FacebookCompose/app/build.gradle
@@ -67,4 +67,5 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:$nav_version"
 
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.5-rc"
+    implementation("io.coil-kt:coil-compose:2.2.2")
 }
