--- a/FacebookCompose/app/build.gradle
+++ b/FacebookCompose/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -49,7 +50,10 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
+
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+
     implementation 'androidx.activity:activity-compose:1.6.0'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
@@ -68,4 +72,7 @@ dependencies {
 
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.5-rc"
     implementation("io.coil-kt:coil-compose:2.2.2")
+
+    implementation platform('com.google.firebase:firebase-bom:31.0.0')
+    implementation 'com.facebook.android:facebook-login:15.0.1'
 }
