--- a/FacebookCompose/app/build.gradle
+++ b/FacebookCompose/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.2.1'
     implementation 'androidx.compose.material:material-icons-extended:1.2.1'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -74,5 +75,8 @@ dependencies {
     implementation("io.coil-kt:coil-compose:2.2.2")
 
     implementation platform('com.google.firebase:firebase-bom:31.0.0')
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     implementation 'com.facebook.android:facebook-login:15.0.1'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
 }
