--- a/FacebookCompose/app/src/main/AndroidManifest.xml
+++ b/FacebookCompose/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
         <activity
             android:name=".presentation.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.FacebookCompose">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,6 +28,9 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/>
     </application>
 
 </manifest>
